[tool.poetry]
name = "upworkhelper"
version = "0.1.0"
description = ""
authors = ["Johnathon Hyland <johnny-hyland@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-upwork = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
